java9 compatibility